fixedburger overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,12 +6,15 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  /* max-width: 100vw; */
+  max-width: 100vw;
   background-color: #11151c;
   color: #7d4e57;
   font-family: "Arima Madurai", cursive;
   font-size: 20px;
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
