--- a/client/src/assets/Nav.css
+++ b/client/src/assets/Nav.css
@@ -95,10 +95,12 @@ h1 {
     top: 0;
     right: 0;
     height: 100vh;
-    width: 300px;
-    padding: 30px;
+    width: 40vw;
+    /* max-width: 100vw; */
+    padding: 40px;
     transition: transform 0.3s ease-in-out;
     z-index: 10;
+    /* margin: none; */
   }
 
   #open {
